# duniter-rs

./: .clog.toml  .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  tarpaulin-report.html
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.gitlab/: release_template.md
binarizer/: Cargo.toml  lib.rs  pubkey_box.rs  sig_box.rs  u16.rs  u32.rs
blockchain/: Cargo.toml  apply_valid_block.rs  check_and_apply_block.rs  clippy.toml  dbex.rs  lib.rs  revert_block.rs  stack_up_block.rs  sync.rs  ts_parsers.rs
conf/: Cargo.toml  keys.rs  lib.rs
conf/test/: conf.json  keypairs.json
core/: Cargo.toml  change_conf.rs  lib.rs  rooter.rs  router.rs
core/cli/: dbex.rs  en.yml  keys.rs  mod.rs  modules.rs  reset.rs  start.rs
crypto/: Cargo.toml  README.md  lib.rs
crypto/hashs/: mod.rs
crypto/keys/: bin_signable.rs  ed25519.rs  mod.rs
crypto/src/: lib.rs
crypto/src/hashs/: mod.rs
crypto/src/keys/: ed25519.rs  mod.rs
dal/: Cargo.toml  balance.rs  block.rs  certs.rs  clippy.toml  constants.rs  currency_params.rs  dal_event.rs  dal_requests.rs  endpoint.rs  identity.rs  lib.rs  sources.rs  test.db  tools.rs
dal/parsers/: blocks.rs  certifications.rs  excluded.rs  identities.rs  memberships.rs  mod.rs  revoked.rs  transactions.rs
dal/writers/: block.rs  certification.rs  dividend.rs  identity.rs  mod.rs  requests.rs  transaction.rs
doc/en/: setup-your-dev-environment.md
documents/: Cargo.toml  README.md  lib.rs
documents/blockchain/: mod.rs
documents/blockchain/v10/documents/: block.rs  certification.rs  identity.rs  membership.rs  mod.rs  revocation.rs  transaction.rs
documents/src/: documents_grammar.pest  lib.rs
documents/src/v10/: block.rs  certification.rs  identity.rs  membership.rs  mod.rs  revocation.rs  transaction.rs
gitlab/: publish.sh
keys/: Cargo.toml  README.md  ed25519.rs  lib.rs
keys/src/: lib.rs
lib/conf/: Cargo.toml
lib/conf/test/: conf.json
lib/core/conf/: Cargo.toml  keys.rs  lib.rs
lib/core/conf/src/: constants.rs  env.rs  errors.rs  file.rs  global_conf.rs  keypairs.rs  keys.rs  lib.rs  modules_conf.rs  resources.rs  v1.rs
lib/core/conf/src/global_conf/: v2.rs
lib/core/conf/src/keypairs/: cli.rs
lib/core/conf/test/v1/: conf-upgraded.json  conf.json
lib/core/conf/test/v2/: conf.json  keypairs.json
lib/core/core/: Cargo.toml  change_conf.rs  lib.rs  router.rs
lib/core/core/cli/: dbex.rs  keys.rs  mod.rs  modules.rs  reset.rs  start.rs
lib/core/core/src/: change_conf.rs  constants.rs  errors.rs  lib.rs  logger.rs  router.rs
lib/core/core/src/commands/: dbex.rs  keys.rs  mod.rs  modules.rs  reset.rs  start.rs
lib/core/message/: Cargo.toml  events.rs  lib.rs  requests.rs  responses.rs
lib/core/message/src/: events.rs  lib.rs  requests.rs  responses.rs
lib/core/module/: Cargo.toml  lib.rs
lib/core/module/src/: lib.rs  module_test.rs
lib/core/network/: Cargo.toml  documents.rs  events.rs  lib.rs  requests.rs
lib/core/network/cli/: mod.rs  sync.rs
lib/crypto/: Cargo.toml
lib/crypto/src/: agreement.rs  encryption.rs  errors.rs  lib.rs  rand.rs  seeds.rs
lib/crypto/src/bases/: b58.rs  b64.rs  mod.rs
lib/crypto/src/hashs/: mod.rs
lib/crypto/src/keys/: bin_signable.rs  ed25519.rs  mod.rs  seed.rs  text_signable.rs
lib/dubp/block-doc/: Cargo.toml  README.md
lib/dubp/block-doc/src/: block.rs  lib.rs  parser.rs
lib/dubp/block-doc/src/block/: v10.rs
lib/dubp/common-doc/: Cargo.toml  README.md
lib/dubp/common-doc/src/: blockstamp.rs  currencies_codes.rs  documents_grammar.pest  errors.rs  lib.rs  parser.rs  traits.rs
lib/dubp/common-doc/src/traits/: text.rs
lib/dubp/currency-params/: Cargo.toml  README.md
lib/dubp/currency-params/src/: constants.rs  db.rs  genesis_block_params.rs  lib.rs
lib/dubp/currency-params/src/genesis_block_params/: v10.rs
lib/skeleton-module/: Cargo.toml
lib/ws2p/: Cargo.toml  constants.rs
message/: Cargo.toml  lib.rs
module/: Cargo.toml  lib.rs
network/: Cargo.toml  documents.rs  lib.rs  network_endpoint.rs  network_head.rs  network_head_v2.rs  network_head_v3.rs  network_peer.rs  requests.rs
network-documents/: Cargo.toml
network-documents/src/: lib.rs  network_documents.pest  network_endpoint.rs  network_head.rs  network_head_v2.rs  network_head_v3.rs  network_peer.rs
protocol/: Cargo.toml  README.md  lib.rs
skeleton-module/: lib.rs
src/: main.rs
tui/: Cargo.toml  lib.rs
wot/: Cargo.toml  lib.rs
wotb/: Cargo.toml  README.md  clippy.toml  distance.rs  legacy.rs  lib.rs  path.rs  rusty.rs
wotb/data/: legacy.rs  mod.rs  rusty.rs
wotb/operations/: centrality.rs  distance.rs  file.rs  mod.rs  path.rs
wotb/src/: lib.rs
ws2p/: Cargo.toml  ack_message.rs  connect_message.rs  constants.rs  datas.rs  generate_peer.rs  heads.rs  lib.rs  ok_message.rs  test.db  ws2p_connection.rs  ws2p_db.rs
ws2p-messages/: Cargo.toml  lib.rs
ws2p-messages/v2/: api_features.rs  connect.rs  mod.rs  ok.rs  payload_container.rs  req_responses.rs  requests.rs  secret_flags.rs
ws2p-v1-legacy/: Cargo.toml  ack_message.rs  clippy.toml  connect_message.rs  constants.rs  datas.rs  heads.rs  lib.rs  ok_message.rs  serializer.rs  ws2p_connection.rs  ws2p_db.rs  ws2p_requests.rs
ws2p-v1-legacy/parsers/: blocks.rs  identities.rs  memberships.rs  mod.rs  transactions.rs
ws2p/controllers/: mod.rs
ws2p/controllers/handler/: connect_msg.rs  mod.rs
ws2p/controllers/incoming_connections/: mod.rs
ws2p/controllers/outgoing_connections/: mod.rs
ws2p/messages/: mod.rs
ws2p/messages/v2/: api_features.rs  connect.rs  mod.rs  ok.rs  payload_container.rs  secret_flags.rs
ws2p/parsers/: blocks.rs  excluded.rs  identities.rs  memberships.rs  mod.rs  transactions.rs
ws2p/services/: mod.rs
ws2p/src/: generate_peer.rs  lib.rs
ws2p/src/controllers/: mod.rs
ws2p/src/controllers/handler/: connect_msg.rs  mod.rs
ws2p/src/controllers/incoming_connections/: mod.rs
ws2p/src/controllers/outgoing_connections/: mod.rs
ws2p/src/services/: mod.rs  outgoing.rs
ws2p/tests/: connection_negociation.rs
(+625 files in other folders)
