[workspace]
members = [
    "bin/dunitrust-server",
    "lib/core/conf",
    "lib/core/core",
    "lib/core/message",
    "lib/core/module",
    "lib/core/network",
    "lib/crypto",
    "lib/dubp/common-doc",
    "lib/dubp/currency-params",
    "lib/dubp/documents",
    "lib/dubp/wot",
    "lib/dunp/network-documents",
    "lib/modules/blockchain/blockchain",
    "lib/modules/blockchain/blockchain-dal",
    "lib/modules/skeleton",
    "lib/modules/tui",
    "lib/modules/ws2p-v1-legacy",
    "lib/modules/ws2p/ws2p",
    "lib/modules/ws2p/ws2p-protocol",
    "lib/tests-tools/crypto-tests-tools",
    "lib/tests-tools/documents-tests-tools",
    "lib/tests-tools/common-tests-tools",
    "lib/tools/common-tools",
    "lib/tools/json-pest-parser",
    "lib/tools/rules-engine",
]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'