[package]
name = "dup-binarizer"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "Binarizer for Dividend Universel Protocol."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.0.1"
byteorder = "1.2.3"
duniter-crypto = { path = "../crypto" }
rust-crypto = "0.2.*"
serde = "1.0.78"

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
# Treat warnings as a build error.
strict = []