[package]
name = "duniter-blockchain"
version = "0.1.0"
authors = ["librelois <elois@ifee.fr>"]
description = "Blockchain module for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-conf = { path = "../conf" }
duniter-crypto = { path = "../crypto" }
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
duniter-wotb = { path = "../wotb" }
log = "0.4.1"
num_cpus = "1.8.0"
pbr = "1.0.1"
rand = "0.4.2"
rustbreak = {version = "2.0.0-rc2", features = ["bin_enc"]}
serde = "1.0.57"
serde_derive = "1.0.57"
serde_json = "1.0.17"
sqlite = "0.23.9"
threadpool = "1.7.1"