[package]
name = "duniter-blockchain"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Blockchain module for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dirs = "1.0.2"
duniter-conf = { path = "../conf" }
dup-crypto = "0.4.0-b1"
duniter-dal = { path = "../dal" }
dubp-documents = { path = "../documents" }
durs-network-documents = { path = "../network-documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
durs-wot = { path = "../wot" }
log = "0.4.*"
num_cpus = "1.8.*"
pbr = "1.0.*"
rustbreak = {version = "2.0.0-rc3", features = ["bin_enc"]}
serde = "1.0.*"
serde_json = "1.0.*"
sqlite = "0.23.*"
threadpool = "1.7.*"