[package]
name = "duniter-conf"
version = "0.1.0"
authors = ["librelois <elois@ifee.fr>"]
description = "Configuration module for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
rand = "0.4.2"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.9"
duniter-crypto = { path = "../crypto" }
duniter-module = { path = "../module" }