[package]
name = "duniter-core"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Duniter-rs core."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dirs = "1.0.2"
duniter-blockchain = { path = "../blockchain" }
duniter-conf = { path = "../conf" }
duniter-crypto = { path = "../crypto" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
log = "0.4.*"
log-panics = "2.0.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
simplelog = "0.5.*"
structopt= "0.2.*"
threadpool = "1.7.*"

[features]
# Treat warnings as a build error.
strict = []