[package]
name = "duniter-crypto"
version = "0.1.2"
authors = ["nanocryk <nanocryk@duniter.org>"]
description = "Manage cryptographic building blocks for the Duniter project."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "keys", "cryptography"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
base58 = "0.1.0"
base64 = "0.8.0"
rust-crypto = "0.2.36"

[features]
# Treat warnings as a build error.
strict = []