[package]
name = "duniter-crypto"
version = "0.2.0-a0.1"
authors = ["nanocryk <nanocryk@duniter.org>"]
description = "Manage cryptographic building blocks for the Duniter project."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "keys", "cryptography"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
base58 = "0.1.*"
base64 = "0.9.*"
bincode = "1.0.1"
rand = "0.4.*"
rust-crypto = "0.2.*"
serde = "1.0.*"
serde_derive = "1.0.*"

[features]
# Treat warnings as a build error.
strict = []