[package]
name = "duniter-dal"
version = "0.1.0"
authors = ["librelois <elois@ifee.fr>"]
description = "Data Access Layer for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
duniter-wotb = { path = "../wotb" }
lazy_static = "1.0.0"
log = "0.4.1"
rand = "0.4.2"
rustbreak = {version = "2.0.0-rc2", features = ["bin_enc"]}
rust-crypto = "0.2.36"
regex = "1.0.0"
serde = "1.0.57"
serde_derive = "1.0.57"
serde_json = "1.0.17"

[features]
exp = []
# Treat warnings as a build error.
strict = []