[package]
name = "duniter-dal"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Data Access Layer for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
durs-wot = { path = "../wot" }
log = "0.4.*"
rustbreak = {version = "2.0.0-rc2", features = ["bin_enc"]}
rust-crypto = "0.2.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[features]
exp = []
# Treat warnings as a build error.
strict = []