[package]
name = "duniter-documents"
version = "0.8.0-a0.1"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@ifee.fr>"]
description = "Handles Duniter documents"
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "document"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
base58 = "0.1.*"
base64 = "0.9.*"
duniter-crypto = { path = "../crypto" }
lazy_static = "1.0.*"
linked-hash-map = "0.5.*"
regex = "1.0.*"
rust-crypto = "0.2.*"
serde = "1.0.*"
serde_derive = "1.0.*"

[features]
# Treat warnings as a build error.
strict = []