[package]
name = "dubp-documents"
version = "0.10.1-b1"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@ifee.fr>"]
description = "Handles DUBP documents (DUBP: DUniter Blockhain Protocol)"
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "document"]
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
base58 = "0.1.*"
base64 = "0.9.*"
byteorder = "1.2.3"
dup-crypto = { path = "../crypto" }
pest = "2.0"
pest_derive = "2.0"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
# Treat warnings as a build error.
strict = []