[package]
name = "duniter-keys"
version = "0.3.1-deprecated"
authors = ["nanocryk <nanocryk@duniter.org>"]
description = "Deprecated crate. Use duniter-crypto."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "keys", "cryptography"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
base58 = "0.1.0"
base64 = "0.8.0"
rust-crypto = "0.2.36"