[package]
name = "duniter-message"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "message model for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = { path = "../crypto" }
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[features]
# Treat warnings as a build error.
strict = []