[package]
name = "duniter-message"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "message model for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = "0.4.0-b1"
duniter-dal = { path = "../dal" }
dubp-documents = { path = "../documents" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
durs-network-documents = { path = "../network-documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[features]
# Treat warnings as a build error.
strict = []