[package]
name = "duniter-module"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
description = "Modules model for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
serde = "1.0.57"
serde_derive = "1.0.57"
serde_json = "1.0.20"

[features]
# Treat warnings as a build error.
strict = []