[package]
name = "duniter-module"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "Modules model for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = "0.3.0-b2"
duniter-documents = { path = "../documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"

[features]
# Treat warnings as a build error.
strict = []