[package]
name = "durs-network-documents"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "Network documents for DUNP (DUniter Network Protocol)"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
base58 = "0.1.*"
dup-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
pest = "2.0"
pest_derive = "2.0"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies]
pretty_assertions = "0.5.1"
bincode = "1.0.1"

[features]
# Treat warnings as a build error.
strict = []