[package]
name = "duniter-network"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "network model for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
base58 = "0.1.*"
byteorder = "1.2.3"
duniter-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
duniter-module = { path = "../module" }
lazy_static = "1.0.*"
regex = "1.0.*"
rust-crypto = "0.2.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies]
pretty_assertions = "0.5.1"
bincode = "1.0.1"

[features]
# Treat warnings as a build error.
strict = []