[package]
name = "duniter-network"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "Network model for the Durs project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
duniter-module = { path = "../module" }
durs-network-documents = { path = "../network-documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
# Treat warnings as a build error.
strict = []