[package]
name = "duniter-tui"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Terminal user interface for Duniter-Rs."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-conf = { path = "../conf" }
dup-crypto = "0.3.0-b2"
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
durs-network-documents = { path = "../network-documents" }
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"
termion = "1.5.*"

[features]
# Treat warnings as a build error.
strict = []