[package]
name = "duniter-wotb"
version = "0.6.1"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
description = "Makes Web of Trust computations for the Duniter project."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "wot", "wotb", "web", "trust"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
serde = "1.0.24"
serde_derive = "1.0.24"
bincode = "0.9.2"
byteorder = "1.2.1"
rayon = "1.0.0"
