[package]
name = "duniter-wotb"
version = "0.8.0-a0.6"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
description = "Makes Web of Trust computations for the Duniter project."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "wot", "wotb", "web", "trust"]
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
serde = "1.0.57"
serde_derive = "1.0.57"
bincode = "0.9.2"
byteorder = "1.2.3"
rayon = "1.0.1"

[features]
# Treat warnings as a build error.
strict = []