[package]
name = "durs-ws2p-messages"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Handles WebSocketToPeer API Messages."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.0.*"
byteorder = "1.2.3"
dup-crypto = { path = "../crypto" }
duniter-documents = { path = "../documents" }
durs-network-documents = { path = "../network-documents" }
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
# Treat warnings as a build error.
strict = []