[package]
name = "durs-ws2p-v1-legacy"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "WebSocketToPeer API for the Durs project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
byteorder = "1.2.3"
duniter-conf = { path = "../conf" }
dup-crypto = "0.3.0-b2"
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
durs-network-documents = { path = "../network-documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
durs-wot = { path = "../wot" }
log = "0.4.*"
rand = "0.4.*"
rust-crypto = "0.2.*"
sqlite = "0.23.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"
ws = { version = "0.7.*", features = ["permessage-deflate"] }

[features]
ssl = ["ws/ssl"]
# Treat warnings as a build error.
strict = []