[package]
name = "duniter-ws2p"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "WebSocketToPeer API for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-conf = { path = "../conf" }
duniter-crypto = { path = "../crypto" }
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
duniter-wotb = { path = "../wotb" }
lazy_static = "1.0.0"
log = "0.4.1"
rand = "0.4.2"
regex = "0.2.6"
rust-crypto = "0.2.36"
sqlite = "0.23.9"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.20"
ws = { version = "0.7.6", features = ["permessage-deflate"] }

[features]
ssl = ["ws/ssl"]
# Treat warnings as a build error.
strict = []