[package]
name = "duniter-ws2p"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "WebSocketToPeer API for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
byteorder = "1.2.3"
duniter-conf = { path = "../conf" }
duniter-crypto = { path = "../crypto" }
duniter-dal = { path = "../dal" }
duniter-documents = { path = "../documents" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
duniter-wotb = { path = "../wotb" }
dup-binarizer = { path = "../binarizer" }
lazy_static = "1.0.*"
log = "0.4.*"
rand = "0.4.*"
regex = "0.2.*"
rust-crypto = "0.2.*"
sqlite = "0.23.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
ws = { version = "0.7.*", features = ["permessage-deflate"] }

[features]
ssl = ["ws/ssl"]
# Treat warnings as a build error.
strict = []