[package]
name = "duniter-conf"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "Configuration module for the Duniter project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
rand = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
dirs = "1.0.2"
dup-crypto = { path = "../crypto" }
dubp-documents= { path = "../documents" }
rpassword = "1.0.0"
duniter-module = { path = "../module" }

[features]
# Treat warnings as a build error.
strict = []