[package]
name = "dup-crypto"
version = "0.7.0"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
description = "Manage cryptographic operations for the DUP (DUniter Protocol)."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "keys", "cryptography"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.11.0"
bs58 = "0.3.0"
byteorder = "1.3.2"
chacha20-poly1305-aead = "0.1.2"
failure = "0.1.5"
ring = "0.16.9"
scrypt = { version = "0.2", default-features = false }
serde = "1.0.*"
serde_derive = "1.0.*"
durs-common-tools = { path = "../tools/common-tools", version = "0.2.0" }
log = "0.4.*"
unwrap = "1.2.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1.2.0"

[features]
