[package]
name = "durs-skeleton-module"
version = "0.1.0"
authors = ["name <mail@domain.tld>"]
description = "Module template to copy to create a new Durs module."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
duniter-conf = { path = "../conf" }
duniter-dal = { path = "../dal" }
duniter-message =  { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
dup-crypto = { path = "../crypto" }
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"

[features]
# Treat warnings as a build error.
strict = []