[package]
name = "durs-ws2p"
version = "0.1.0-a0.1"
authors = ["librelois <elois@ifee.fr>"]
description = "WebSocketToPeer API for DURS Project."
license = "AGPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.0.*"
duniter-conf= { path = "../conf" }
dup-crypto = { path = "../crypto" }
dubp-documents= { path = "../documents" }
durs-network-documents = { path = "../network-documents" }
durs-ws2p-messages = { path = "../ws2p-messages" }
duniter-documents = { path = "../documents" }
duniter-message= { path = "../message" }
duniter-module = { path = "../module" }
duniter-network = { path = "../network" }
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"
ws = { version = "0.7.*", features = ["permessage-deflate"] }

[features]
ssl = ["ws/ssl"]
# Treat warnings as a build error.
strict = []