[package]
name = "durs-conf"
version = "0.2.0-a"
authors = ["librelois <elois@ifee.fr>"]
description = "Configuration module for the Duniter project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dirs = "1.0.2"
dup-crypto = { path = "../../crypto" }
dubp-currency-params = { path = "../../dubp/currency-params" }
dubp-documents= { path = "../../dubp/documents" }
durs-module = { path = "../module" }
durs-common-tools = { path = "../../tools/common-tools" }
failure = "0.1.5"
log = "0.4.*"
rand = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
rpassword = "1.0.0"

[features]
