[package]
name = "durs-conf"
version = "0.3.0-dev"
authors = ["librelois <elois@ifee.fr>"]
description = "Configuration module for the Duniter project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dirs = "2.0.2"
dup-crypto = { path = "../../crypto" }
dubp-currency-params = { path = "../../dubp/currency-params" }
dubp-user-docs= { path = "../../dubp/user-docs" }
durs-message =  { path = "../message" }
durs-module = { path = "../module" }
durs-common-tools = { path = "../../tools/common-tools" }
envy = "0.4.1"
failure = "0.1.5"
log = "0.4.*"
rpassword = "4.0.3"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
unwrap = "1.2.1"

[dev-dependencies]
durs-module = { path = "../module", features = ["module-test"] }
maplit = "1.0.2"
once_cell = "1.3.1"

[features]
