[package]
name = "durs-core"
version = "0.2.0-a"
authors = ["librelois <elois@ifee.fr>"]
description = "Durs core."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dirs = "1.0.2"
durs-blockchain = { path = "../../modules/blockchain/blockchain" }
durs-common-tools = { path = "../../tools/common-tools" }
durs-conf = { path = "../conf" }
dup-crypto = { path = "../../tools/crypto" }
durs-message =  { path = "../message" }
durs-module = { path = "../module" }
durs-network = { path = "../network" }
durs-network-documents = { path = "../../tools/network-documents" }
failure = "0.1.5"
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
simplelog = "0.5.*"
structopt= "0.2.*"
threadpool = "1.7.*"
unwrap = "1.2.1"

[features]
