[package]
name = "durs-core"
version = "0.3.0-dev"
authors = ["librelois <elois@ifee.fr>"]
description = "Dunitrust core."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
clap = "2.33.0"
clear_on_drop = "0.2.3"
durs-bc = { path = "../../modules/blockchain/blockchain" }
durs-common-tools = { path = "../../tools/common-tools" }
durs-bc-db-reader = { path = "../../modules-lib/bc-db-reader" }
durs-conf = { path = "../conf" }
durs-dbs-tools = { path = "../../tools/dbs-tools" }
dup-crypto = { path = "../../crypto" }
dubp-currency-params = { path = "../../dubp/currency-params" }
durs-message =  { path = "../message" }
durs-module = { path = "../module" }
durs-network = { path = "../network" }
durs-network-documents = { path = "../../dunp/network-documents" }
envy = "0.4.1"
failure = "0.1.5"
fern = { version = "0.5.8", features = ["colored"] }
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.3.9"
unwrap = "1.2.1"

[features]
