[package]
name = "durs-message"
version = "0.2.0-a"
authors = ["librelois <elois@ifee.fr>"]
description = "message model for the Dunitrust project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dup-crypto = { path = "../../crypto" }
dup-currency-params = { path = "../../dubp/currency-params" }
dubp-documents= { path = "../../dubp/documents" }
durs-module = { path = "../module" }
durs-network = { path = "../network" }
durs-blockchain-dal = { path = "../../modules/blockchain/blockchain-dal" }
durs-network-documents = { path = "../../dunp/network-documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[features]
