[package]
name = "durs-message"
version = "0.3.0-dev"
authors = ["librelois <elois@ifee.fr>"]
description = "message model for the Dunitrust project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dubp-block-doc = { path = "../../dubp/block-doc"} #, version = "0.1.0" }
dubp-common-doc = { path = "../../dubp/common-doc"} #, version = "0.1.0" }
dubp-currency-params = { path = "../../dubp/currency-params" }
dubp-user-docs= { path = "../../dubp/user-docs" }
dup-crypto = { path = "../../crypto" }
durs-module = { path = "../module" }
durs-network = { path = "../network" }
durs-network-documents = { path = "../../dunp/network-documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[features]
