[package]
name = "durs-module"
version = "0.1.0-a0.1"
authors = ["librelois <elois@duniter.org>"]
description = "Modules model for the Duniter project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dup-crypto = { path = "../../tools/crypto" }
dubp-documents= { path = "../../tools/documents" }
durs-network-documents = { path = "../../tools/network-documents" }
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"

[features]
